--- a/doc/上下滚动时，标题栏透明度渐变.md
+++ b/doc/上下滚动时，标题栏透明度渐变.md
@@ -5,7 +5,7 @@
 简单
 
 ### ListView实现
-![效果图]()
+![效果图](https://github.com/qiangxi/PopularEffect/blob/master/gif/gif001.gif?raw=true)
 #### 实现原理
 继承ListView，重写`onScrollChanged(int l, int t, int oldl, int oldt)`方法，在该方法中更改指定view的透明度，
 同时需要为ListView添加一个HeaderView，在ListView滑动过程中，不断的获取头部的top值，用来计算透明度百分比。
@@ -30,7 +30,7 @@ protected void onScrollChanged(int l, int t, int oldl, int oldt) {
 
 
 ### ScrollView实现
-![效果图]()
+![效果图](https://github.com/qiangxi/PopularEffect/blob/master/gif/GIF002.gif?raw=true)
 #### 实现原理
 继承ScrollView，重写`onScrollChanged(int l, int t, int oldl, int oldt)`方法，在该方法中更改指定view的透明度即可。
 #### 核心代码
@@ -52,7 +52,7 @@ protected void onScrollChanged(int l, int t, int oldl, int oldt) {
 [ScrollViewFadeActivity](https://github.com/qiangxi/PopularEffect/blob/master/app/src/main/java/com/qiangxi/populareffect/activity/scrollview/ScrollViewFadeActivity.java)
 [FadeScrollView](https://github.com/qiangxi/PopularEffect/blob/master/app/src/main/java/com/qiangxi/populareffect/view/FadeScrollView.java)
 ### RecyclerView实现
-![效果图]()
+![效果图](https://github.com/qiangxi/PopularEffect/blob/master/gif/GIF003.gif?raw=true)
 #### 实现原理
 与ListView一样，原理都是不断获取HeadView的Top值，然后计算透明度百分比；但RecyclerView实现该效果稍微有些繁琐，
 因为RecyclerView没有添加头部的方法，所以需要借助开源框架实现，这里使用
